Add controllers, service logic, contract ABIs.

--- a/contracts-api-backend/.env.example
+++ b/contracts-api-backend/.env.example
@@ -7,3 +7,8 @@ DB_PORT=-1
 DB_USER=exampleUser
 DB_PASSWORD=examplePassword
 DB_DATABASE=exampleDatabase
+
+PRIVATE_KEY=0xkey
+
+NFT_CONTRACT=0xkey
+AUCTION_FACTORY=0xkey
