--- a/contracts-api-backend/.env.example
+++ b/contracts-api-backend/.env.example
@@ -8,7 +8,8 @@ DB_USER=exampleUser
 DB_PASSWORD=examplePassword
 DB_DATABASE=exampleDatabase
 
+# Smart contract configuration
+WS_URL=http://example:-1
 PRIVATE_KEY=0xkey
-
 NFT_CONTRACT=0xkey
 AUCTION_FACTORY=0xkey
